Finish assignment 1 for java 4, and update  a unit test in the samples.